<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/Mcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modCode" />
    
    <TextView
        android:id="@+id/Mname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modName" />

    <TextView
        android:id="@+id/Ayear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/sem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem" />

    <TextView
        android:id="@+id/Mcredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modCredit" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/back"/>
    
    
    
</LinearLayout>